<resources>
    <string name="app_name">MedicineReminder</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="insert">Insert</string>
    <string name="insertmedicine" formatted="true">Insert Medicine</string>
    <string name="viewmedicine">View Medicine</string>
    <string name="morning">Morning</string>
    <string name="noon">Noon</string>
    <string name="afternoon">Afternoon</string>
    <string name="night">Night</string>
    <string name="insertthings">Insert Items</string>
    <string name="takepicture">Take a picture</string>
    <string name="medicineimage">Image</string>
    <string name="addimage">Add Image</string>
    <string name="time">Time Period</string>
    <string name="insertButton">Save</string>
    <string name="quantity">Quantity</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="medicinename">Medicine name</string>
</resources>
