<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/insertmedicine">
        <menu>
            <item
                android:id="@+id/insert"
                android:icon="@drawable/ic_insert_icon"
                android:title="@string/insert" />
        </menu>
    </item>

    <item android:title="@string/viewmedicine">
        <menu>
            <item
                android:id="@+id/morning"
                android:icon="@drawable/ic_morning_icon"
                android:title="@string/morning"/>
            <item
                android:id="@+id/noon"

                android:title="@string/noon" />
            <item
                android:id="@+id/afternoon"
                android:title="@string/afternoon" />
            <item
                android:id="@+id/night"
                android:icon="@drawable/ic_night_icon"
                android:title="@string/night" />
        </menu>
    </item>
    <!--<group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="Import" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>-->
</menu>
